@@ -17,6 +17,7 @@ class Number(object):
     caring what kind, use isinstance(x, Number).
     """
     __metaclass__ = ABCMeta
+    __slots__ = ()
 
     # Concrete numeric types must provide their own hash implementation
     __hash__ = None
@@ -40,6 +41,8 @@ class Complex(Number):
     knowledge about them, it should fall back to the builtin complex
     type as described below.
     """
+
+    __slots__ = ()
 
     @abstractmethod
     def __complex__(self):
@@ -172,6 +175,8 @@ class Real(Complex):
     Real also provides defaults for the derived operations.
     """
 
+    __slots__ = ()
+
     @abstractmethod
     def __float__(self):
         """Any Real can be converted to a native float object.
@@ -265,6 +270,8 @@ Real.register(float)
 class Rational(Real):
     """.numerator and .denominator should be in lowest terms."""
 
+    __slots__ = ()
+
     @abstractproperty
     def numerator(self):
         raise NotImplementedError
@@ -287,6 +294,8 @@ class Rational(Real):
 
 class Integral(Rational):
     """Integral adds a conversion to long and the bit-string operations."""
+
+    __slots__ = ()
 
     @abstractmethod
     def __long__(self):
